Display table account and Balance

--- a/dappDjangoApp/templates/main_view.html
+++ b/dappDjangoApp/templates/main_view.html
@@ -7,7 +7,7 @@
 	<form action="/result/" method="post"> {% csrf_token %}
 		<label>Enter Index of Account:</label>
 		<input type="text" name="accountIndex">
-		<input type="submit" value="Submit">
+		<input type="submit" value="Show">
 	</form>
 </body>
 </html>
